# pdl-lt-dictconsistency

./: .gitignore  Dockerfile  datasources.example.json  index_data.py  pyproject.toml  rxconfig.py
.claude/: settings.local.json
pdl_lt_dictconsistency/: components.py  data.py  datasources_config.py  llm_query.py  nesting.py  ocr_query.py  pathfinder.py  pdl_lt_dictconsistency.py  processing.py  senses_stats.py  settings.py  spelling.py  state.py  tag_content.py  teilex0.rng  uniqueness.py  validator.py  xml_structure.py  xml_structure_analysis.py
pdl_lt_dictconsistency_backup/: data.py  pathfinder.py  uniqueness.py
pdl_lt_dictconsistency_backup_2/: components.py  data.py  pathfinder.py  pdl_lt_dictconsistency.py  state.py  tag_content.py  uniqueness.py  validator.py
pdl_lt_dictconsistency_backup_3/: components.py  data.py  llm_query.py  pathfinder.py  pdl_lt_dictconsistency.py  settings.py  state.py  tag_content.py  uniqueness.py  validator.py
pdl_lt_dictconsistency_backup_4/: components.py  data.py  llm_query.py  pathfinder.py  pdl_lt_dictconsistency.py  tag_content.py  uniqueness.py  validator.py
pdl_ltlabtools_dictconsistency/: teilex0.rng
tools/spellings/: README.md  dwds_api_errors.csv  generate_spellings.py  query_dwds_api.py  spellings.csv  supplement.csv  test-spelling.xml  whitelist.csv
